--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,6 @@
         <title>springboot thymeleaf example</title>
     </head>
     <body>
-        Hello World!!
+        Hello jenkins!!
     </body>
 </html>
